--- a/package.json
+++ b/package.json
@@ -1,12 +1,44 @@
 {
-  "devDependencies": {},
+  "name": "react-testing",
+  "version": "1.0.0",
+  "description": "get in touch with React.js",
+  "main": "README.md",
+  "private": false,
+  "contributors": [
+    {
+      "name": "Alexander Baum",
+      "email": "mail@alexbaum.de"
+    },
+    {
+      "name": "Gedeon Moritz",
+      "email": "gedeonmoritz@web.de"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/4lexBaum/react-testing.git"
+  },
+  "browserify": {
+        "transform": [
+            ["reactify", {"es6": true}]
+        ]
+  },
+  "scripts":{
+    "build": "browserify -t [babelify reactify] ./main.js -o ./public/bundle.js",
+    "server": "node ./src/Backend/server.js"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.11.1"
+  },
   "dependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "reactify": "^1.1.1"
   }
 }
