--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "url": "git+https://github.com/4lexBaum/react-testing.git"
   },
   "browserify": {
-        "transform": [
-            ["reactify", {"es6": true}]
-        ]
+    "transform": [
+      [
+        "reactify",
+        {
+          "es6": true
+        }
+      ]
+    ]
   },
-  "scripts":{
+  "scripts": {
     "build": "browserify -t [babelify reactify] ./main.js -o ./public/bundle.js",
     "server": "node ./src/Backend/server.js"
   },
@@ -38,6 +43,7 @@
     "browserify": "^13.1.0",
     "express": "^4.14.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
     "reactify": "^1.1.1"
   }
