--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
+    "highcharts": "^4.2.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
+    "react-c3js": "^0.1.8",
     "react-dom": "^15.3.2",
     "reactify": "^1.1.1"
   }
