--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-bootstrap": "^0.30.3",
     "react-c3js": "^0.1.8",
     "react-dom": "^15.3.2",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "socket.io": "^1.4.8"
   }
 }
